--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,9 +58,23 @@ p {
 /* header */
 
 header {
-  background-color: silver;
-  padding: 20px 50px 20px 50px;
+  nav {
+    .logo {
+      font-size: 1.8em;
+      letter-spacing: 3px;
+      padding-left: 30px;
+    }
+    div {
+      ul {
+        li {
+          padding-right: 30px;
+        }
+      }
+    }
+  }
 }
+
+
 
 /* container */
 
@@ -71,10 +85,19 @@ header {
 /* footer */
 
 footer {
-  background-color: midnightblue;
-  color: white;
-  padding: 10px 100px 10px 100px;
+  padding: 10px 100px 15px 100px;
+  a {
+    color: white;
+    font-size: 1.8em;
+    letter-spacing: 3px;
+    &:hover{
+      color: white;
+    }
+  }
   p {
+    color: white;
     vertical-align: middle;
+    font-weight: lighter;
+    font-size: 0.9em;
   }
 }
