--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,4 @@
-<footer class="center">
-  <p>&copy; 2020 Takuro Shimpo</p>
+<footer class="center bg-dark">
+    <%= link_to "webpp", root_path, class:"navbar-brand logo"  %>
+    <p>&copy; 2020 Takuro Shimpo</p>
 </footer>
