Userモデル/Userコントローラーの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
   <body>
     <div id="wrapper">
       <%= render "shared/header" %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <div id="container">
         <%= yield %>
       </div>
