--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,8 @@
-<p>Welcome <%= @email %>!</p>
+<p>下記URLをクリックし、登録を完了してください。</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>▼登録用URL<br>
+<%= confirmation_url(@resource, confirmation_token: @token) %><br>
+※ URLをクリックしてもアクセスできない場合は、上記URLをコピーし、ブラウザのアドレス入力欄に貼り付けてアクセスしてください。<br></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>※ もしお心当たりのない場合、本メールは破棄して頂けるようお願いいたします。</p>
