--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <% @title = "user" %>
 
-<p>user controller show </p>
+<h2>ユーザ情報</h2>
+<%# 画像 %>
+<p><%= @user.nickname %></p>
+<%= link_to "編集", edit_user_registration_path %>
