--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="field">
     <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autofocus: true, autocomplete: "email" %>
+    <%= f.text_field :nickname, autofocus: true %>
   </div>
 
   <div class="field">
