--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,8 @@
 
 @import "reset";
 
+$button: rgba(156, 206, 94, 0.78);
+
 /* universal */
 
 div#wrapper {
@@ -28,6 +30,8 @@ body {
     "Hiragino Sans",
     Meiryo,
     sans-serif;
+  background-color: #f2f2f2;
+  -webkit-text-size-adjust: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -42,9 +46,8 @@ h1 {
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size:2em;
   letter-spacing: -1px;
-  margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
 }
@@ -55,41 +58,212 @@ p {
   line-height: 1.7em;
 }
 
+em { font-style: normal }
+
 /* header */
 
 header {
-  nav {
-    .logo {
-      font-size: 1.8em;
-      letter-spacing: 3px;
-      padding-left: 30px;
-    }
-    div {
-      ul {
-        li {
-          padding-right: 30px;
-        }
+  width: 100%;
+    nav {
+      margin: 0 auto;
+      // max-width: 960px;
+
+      .logo {
+        font-size: 1.8em;
+        letter-spacing: 3px;
       }
+      div {
+        ul {
+          li {
+            padding-right: 2em;
+          }
+        }
+      
     }
   }
 }
 
+/* flash */
+
+.notice {
+  padding: 0.6rem 0.4rem;
+  margin-bottom: 0;
+  text-align: center;
+  color: rgba(69, 165, 56, 0.918);;
+  background-color: #a2db9683;
+  border: 1px solid rgba(64, 221, 59, 0.733);
+  border-radius: 0;
+
+}
+.alert {
+  padding: 0.6rem 0.4rem;
+  margin-bottom: 0;
+  text-align: center;
+  color: rgba(206, 96, 69, 0.918);;
+  background-color: #f3a5a583;
+  border: 1px solid rgba(221, 59, 59, 0.733);
+  border-radius: 0;
+}
 
 
 /* container */
 
 #container {
-  padding: 20px 50px 20px 50px;
+  padding: 2em 0;
+
+
+/* form */
+
+  .form-container {
+    background: #fff;
+    padding: 2em 3em;
+    max-width: 540px;
+    margin: 0 auto;
+    box-shadow: 0 0 0.5em #c0c0c0;
+    border-radius: 2px;
+    h1 {
+      font-size:1.8em;
+      color:darken(#e5e5e5, 56%);
+      margin-bottom: .9em;
+    }
+    #error_explanation {
+      h2 {
+        margin-bottom: 1em;
+        font-size: 1em;
+        padding: 0.6rem 0.4rem;
+        color: rgba(206, 96, 69, 0.918);;
+        background-color: #f3a5a583;
+        border: 1px solid rgba(221, 59, 59, 0.733);
+        border-radius: 0.25rem;
+      }
+      ul {
+        li {
+          margin-left: 1em;;
+          font-size: 1em;
+          color: #f33;
+        }
+      }
+    }
+    p {
+      font-size: 0.9em;
+      color: rgb(112, 112, 112);
+    }
+    hr {
+      border-width: 1px 0 0 0;
+      border-style: solid;
+      border-color: #e5e5e5;
+    }
+    .button {
+      margin: 8px 0;
+    }
+    form {
+      div {
+        color: rgb(133, 131, 131);
+        &.field {
+          margin-bottom: 1.1em;
+        }
+        input {
+          display: block;
+          box-sizing: border-box;
+          width: 100%;
+          outline: none;
+          margin:0;
+         }
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+          background: #fff;
+          border: 1px solid #dbdbdb;
+          font-size: 1em;
+          letter-spacing: 0.04em;
+          padding: .2em .3em;
+          border-radius: 2px;
+          color: #333;
+        }
+        input[type="text"]:focus,
+        input[type="email"]:focus,
+        input[type="password"]:focus {
+        background: #fff
+        }
+        input[type="submit"] {
+          width: 50%;
+          display: block;
+          //font-size: 1.1em;
+          //line-height: 1em;
+          margin:1.7em auto 1em;
+          outline: none;
+          //padding: .7em 0;
+          //text-shadow: 0 0.5px #57a04b;
+        }
+        input[type="checkbox"] {
+          display: inline-block;
+          width: 1em;
+        }
+        label{
+          margin-bottom: 0;
+          font-size: 15px;
+          padding: 0.5px 3px;
+          font-weight: 400;
+          background-color: rgba(255,255,255,0);
+          @include transition(color .3s, top .3s, background-color .8s);
+          &.floatLabel{
+            top: -11px;
+            background-color: rgba(255,255,255,0.8);
+            font-size: 14px;
+          }
+        }
+        small {
+          padding-left: .5em;
+          color: #65b7d3;
+          &.red {
+            color: red;
+            font-weight: bold;
+          }
+        }
+        p {
+          img {
+            padding: .5em 0;
+          }
+        }
+      }
+      &.button_to {
+        font-size: 1em;
+        border-radius: 0.25rem;
+        border: 1px solid #cc4a4a;
+        line-height: 1.5;
+        color: #fff;
+        width: 50%;
+        margin: 0 auto 1em;
+        display: block;
+        text-align: center;
+        input {
+          padding: 0.375rem 0.75rem;
+          background-color: #cc4a4a;
+          width: 100%;
+          transition: background-color 0.2s;
+          &:hover {
+            background-color: #b13232;
+          }
+        }
+      }
+      
+    }
+
+  }
 }
+
+
 
 /* footer */
 
 footer {
-  padding: 10px 100px 15px 100px;
-  a {
+  padding: 10px 0 15px 0;
+  .logo {
+    display: inline-block;
     color: white;
-    font-size: 1.8em;
-    letter-spacing: 3px;
+    font-size: 1.4em;
+    letter-spacing: .1em;
+    text-decoration: none;
     &:hover{
       color: white;
     }
@@ -101,9 +275,6 @@ footer {
     font-size: 0.9em;
   }
 }
-
-
-
 
 
 /* debug */
