--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>下記URLをクリックし、パスワードを再設定してください。</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>URLにアクセスし、パスワードを再設定するまでは、パスワードは変更さr得ません。</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>※ もしお心当たりのない場合、本メールは破棄して頂けるようお願いいたします。</p>
