Deviseのテストの改善

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,6 +2,6 @@
 
 <p><%= edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>URLにアクセスし、パスワードを再設定するまでは、パスワードは変更さr得ません。</p>
+<p>URLにアクセスし、パスワードを再設定するまでは、パスワードは変更されません。</p>
 
 <p>※ もしお心当たりのない場合、本メールは破棄して頂けるようお願いいたします。</p>
