--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% @title = "user" %>
+<% @title = @user.nickname %>
 
 <h2>ユーザ情報</h2>
 <% if @user.image.present? %>
@@ -7,4 +7,6 @@
   <p><%= image_tag 'default.png' %></p>
 <% end %>
 <p><%= @user.nickname %></p>
-<%= link_to "編集", edit_user_registration_path %> 
+<% if @user == current_user %>
+  <%= link_to "編集", edit_user_registration_path %> 
+<% end %>
