--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <body>
     <div id="wrapper">
       <%= render "shared/header" %>
-      <%= render "shared/devise_flash" %>
+      <%= render "shared/flash" %>
       <div id="container" class="container">
         <%= yield %>
       </div>
