--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,7 +30,7 @@ body {
     "Hiragino Sans",
     Meiryo,
     sans-serif;
-  background-color: #f2f2f2;
+  background-color: #ecececfd;
   -webkit-text-size-adjust: 100%;
 }
 
@@ -117,7 +117,7 @@ header {
   .form-container {
     background: #fff;
     padding: 2em 3em;
-    max-width: 540px;
+    max-width: 600px;
     margin: 0 auto;
     box-shadow: 0 0 0.5em #c0c0c0;
     border-radius: 2px;
@@ -275,9 +275,29 @@ header {
           }
         }
       }
-      
     }
-
+    .delete-button {
+      font-size: 1em;
+        border-radius: 0.25rem;
+        border: 1px solid #cc4a4a;
+        line-height: 1.5;
+        width: 50%;
+        margin: 0 auto 1em;
+        display: block;
+        text-align: center;
+      a {
+        color: #fff;
+        text-decoration: none;
+        display: block;
+        padding: 0.375rem 0.75rem;
+          background-color: #cc4a4a;
+          width: 100%;
+          transition: background-color 0.2s;
+          &:hover {
+            background-color: #b13232;
+          }
+      }
+    }
   }
 }
 
@@ -375,6 +395,12 @@ header {
         //  box-shadow: 0 3px 15px rgba(0,0,0,0.45);
         //   transform: translateY(-0.1875em);
         }
+        .title {
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          padding: 0 1em;
+        }
         a {
           position: absolute;
         top: 0px;
@@ -408,7 +434,7 @@ header {
           text-align: center;
         }
       }
-      .user-field {
+      .bottom-field {
         // border: 1px solid rgb(161, 50, 50);
         margin-bottom: 2em;
         padding-bottom: 5px;
@@ -438,6 +464,99 @@ header {
   }
 }
 
+/* posts#show */
+
+.post-wrapper {
+  max-width: 700px;
+  margin: 1.8em auto;
+  .user-field {
+    margin: 0;
+    padding-right: 5px;
+    text-align: right;
+    font-size: 20px;
+    p {
+      display: inline-block;
+      a {
+        color: #2499cf;
+        text-decoration: none;
+        transition: color 0.2s;
+        &:hover {
+          color : #e0714f;
+        }
+      }
+    }
+    .user_small_img {
+      img {
+        margin-left: 2px;
+        border-radius: 50%;
+        border: 1px solid rgba(204, 204, 204, 0.555);
+      }
+    }
+  }
+  .edit {
+    text-align: right;
+    margin-bottom: -15px;
+    z-index: 1;
+    a {
+      margin-right: .5em;
+    }
+  }
+  
+  h2 {
+    font-size:1.4em;
+    margin: 0 0 .8em;
+  }
+  .title-top {
+    font-size: 13px;
+    text-align: center;
+    color: #6e6e6e;
+  }
+  .post-image {
+    box-shadow: 0 0 15px rgba(0,0,0,0.15);
+    text-align: center;
+    padding: 10px;
+    // background-color: #f1f1f1;
+    background-color: #fff;
+  }
+  .post-info {
+    padding-left: 3.8em;
+    p {
+      border-bottom: 1px solid #c2c2c2c5;
+      line-height: 2.2em;
+      font-size: 17px;
+    }
+    span {
+      font-size: 12.5px;
+      color: #6e6e6e;
+      display: inline-block;
+      padding-left: 1.1em;
+      width: 155px;
+    }
+  }
+
+  .post-content-container {
+    position: relative;
+    margin: 2em 0;
+    padding: 0.5em 1em;
+    border: solid 2.5px #acacac;;
+    border-radius: 8px;
+    min-height: 50px;
+    .post-content-top {
+      position: absolute;
+      display: inline-block;
+      top: -13px;
+      left: 10px;
+      padding: 0 9px;
+      font-size: 13px;
+      color: #6e6e6e;
+      background-color: #ecececfd;
+    }
+    .post-content {
+      font-size: 14.5px;
+      padding: .5em .5em;
+    }
+  }
+}
 
 
 
