--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
 <ul class = "posts row" >
 
 <% @posts.each do |post| %>
-  <li class="col-lg-3 col-md-4 col-sm-6 justify-content-around">
+  <li class="col-lg-3 col-md-6 col-sm-6 justify-content-around">
     <div class="post-container">
       <div class="post-field">
         <% if post.post_image.present? %>
@@ -16,7 +16,7 @@
         <p class="title"><%= post.title %></p>
         <p><%= link_to post.title, post %></p>
       </div>
-      <div class="user-field">
+      <div class="bottom-field">
         <p><%= link_to post.user.nickname, post.user %></p>
         <% if post.user.image.present? %>
           <p class="user_small_img"><%= image_tag post.user.image_url(:thumb45) %></p>
