--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -12,7 +12,7 @@
       <% if @post.post_image.present? %>
         <p><%= image_tag @post.post_image_url(:post_thumb200) %></p>
       <% else %>
-        <p><%= image_tag 'default.png' %></p>
+        <p class="default-post-image"><%= image_tag 'no_image200.png' %></p>
       <% end %>
       <%= f.file_field :post_image %>
     </div>
