--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
         <% if post.post_image.present? %>
           <p class="post-img"><%= image_tag post.post_image_url %></p>
         <% else %>
-          <p class="post-img"><%= image_tag 'no_image200.png' %></p>
+          <p class="post-img default-post-image"><%= image_tag 'no_image200.png' %></p>
         <% end %>
         <p class="title"><%= post.title %></p>
         <p><%= link_to post.title, post %></p>
@@ -21,7 +21,7 @@
         <% if post.user.image.present? %>
           <p class="user_small_img"><%= image_tag post.user.image_url(:thumb45) %></p>
         <% else %>
-          <p class="user_small_img"><%= image_tag 'default_small_45.png' %></p>
+          <p class="user_small_img default-user-image"><%= image_tag 'default_small_45.png' %></p>
         <% end %>
       </div>
     </div>
