--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,16 +9,16 @@
     <div class="user-field col-12">
         <p><%= link_to @post.user.nickname, @post.user %></p>
         <% if @post.user.image.present? %>
-          <p class="user_small_img"><%= image_tag @post.user.image_url(:thumb45) %></p>
+          <p class="user_small_img"><%= image_tag @post.user.image_url(:thumb200) %></p>
         <% else %>
-          <p class="user_small_img default-user-image"><%= image_tag 'default_small_45.png' %></p>
+          <p class="user_small_img default-user-image"><%= image_tag 'default.png' %></p>
         <% end %>
       </div>
   <% end %>
   <p class="col-12 title-top">タイトル</p>
   <h2 class="col-12"><%= @post.title %></h2>
   <% if @post.post_image.present? %>
-    <p class="post-image col-4"><%= image_tag @post.post_image_url(:post_thumb200) %></p>
+    <p class="post-image col-4"><%= image_tag @post.post_image_url %></p>
   <% else %>
     <p class="post-image col-4 default-post-image"><%= image_tag 'no_image200.png' %></p>
   <% end %>
