--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -250,8 +250,17 @@ header {
           }
         }
         p {
+          &.post-img {
+            img {
+              margin: .5em 0;
+              height: 180px;
+              width: auto;
+            }
+          }
           img {
-            padding: .5em 0;
+            margin: .5em 0;
+            width: 120px;
+            height: 120px;
           }
         }
       }
@@ -325,6 +334,10 @@ header {
         box-shadow: 0 3px 15px rgba(0,0,0,0.45);
           transform: translateY(-0.1875em);
       }
+      img {
+        width: 75px;
+        height: 75px;
+      }
       a {
         position: absolute;
         top: 0px;
@@ -365,6 +378,18 @@ header {
         //display: inline-block;
         font-size: 0.8em;
       }
+    }
+  }
+}
+
+
+/* Users show */
+
+.user-info {
+  p {
+    img {
+      width: 170px;
+      height: 170px;
     }
   }
 }
@@ -453,8 +478,12 @@ header {
           }
         }
         .user_small_img {
+          
+          // height: 50px;
           img {
-            margin-left: 2px;
+            width: 55px;
+            height: 55px;
+            margin: 2px;
             border-radius: 50%;
             border: 1px solid rgba(204, 204, 204, 0.555);
           }
@@ -487,7 +516,9 @@ header {
     }
     .user_small_img {
       img {
-        margin-left: 2px;
+        margin-left: 5px;
+        width: 55px;
+        height: 55px;
         border-radius: 50%;
         border: 1px solid rgba(204, 204, 204, 0.555);
       }
@@ -517,13 +548,30 @@ header {
     padding: 10px;
     // background-color: #f1f1f1;
     background-color: #fff;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    width: 255px;
+    height: 255px;
+    img {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: auto;
+      width: auto;
+      max-height: 88%;
+      margin: auto;
+    }
   }
   .post-info {
+    margin-top: 5px;;
     padding-left: 3.8em;
     p {
       border-bottom: 1px solid #c2c2c2c5;
-      line-height: 2.2em;
-      font-size: 17px;
+      line-height: 2.4em;
+      font-size: 16px;
     }
     span {
       font-size: 12.5px;
