--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,29 @@
-<% if @post.errors.any? %>
+<%
+=begin%>
+ <% if @post.errors.any? %>
   <div id="error_explanation">
     <h2>
       <%= @post.errors.count %>件のエラーが発生したため投稿は保存されませんでした。
     </h2>
     <ul>
       <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %> 
+<%
+=end%>
+<% if resource.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= I18n.t("errors.messages.not_saved",
+                 count: resource.errors.count,
+                 resource: resource.class.model_name.human.downcase)
+       %>
+    </h2>
+    <ul>
+      <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
