--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,8 @@
 
 @import "reset";
 
+.like-red { color: #FF6666;}
+
 $button: rgba(156, 206, 94, 0.78);
 
 /* universal */
@@ -461,6 +463,7 @@ header {
       }
       .bottom-field {
         // border: 1px solid rgb(161, 50, 50);
+        margin-top: .2em;
         margin-bottom: 2em;
         padding-bottom: 5px;
         padding-right: 5px;
@@ -492,6 +495,34 @@ header {
     }
   }
 }
+
+/* いいねボタン*/
+.like {
+  text-align: right;
+  padding-right: 7px;
+  .fa-heart {
+    &:hover {
+      opacity: 0.7;
+      transition: 0.15s;
+    }
+    vertical-align: top;
+    span {
+      font-size: 18px;
+      font-weight: 600;
+    }
+  }
+  &.normal {
+    .fa-heart {
+      vertical-align: baseline;
+    }
+  }
+}
+.like-size {
+  font-size: 1.3em;
+}
+
+
+
 
 /* posts#show */
 
