“フォロー・フォロー解除の実装（Ajax）”

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,34 @@
   <% else %>
     <p class="default-user-image"><%= image_tag 'default.png' %></p>
   <% end %>
-  <p><%= @user.nickname %></p>
   <% if @user == current_user %>
     <%= link_to "編集", edit_user_registration_path %> 
+  <% else %>
+    <%= render "follow_form" %>
   <% end %>
+  <p><%= @user.nickname %></p>
+  <div id="follow_users">
+    <%= render "follow_users" %>
+  </div>
+  <div id="follower_users">
+    <%= render "follower_users" %>
+  </div>
+
+
+  <%
+=begin%>
+ <div id="follow_users">
+    <%= link_to following_user_path(@user.id) do %>
+      <p>フォロー<span><%= @user.following.count %></span></p>
+    <% end %>
+  </div>
+  <div class="follower_users">
+    <%= link_to followers_user_path(@user.id) do %>
+      <p>フォロワー<span><%= @user.followers.count %></span></p>
+    <% end %>
+  </div> 
+<%
+=end%>
+
+
 </div>
