--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -1,1 +1,11 @@
-<p>フォロワーshowページです</p>
+<% @title = "#{@user.nickname} フォロワー" %>
+<% @current = 'followers' %>
+
+<%= render partial: 'user_tab' %>
+<%= render partial: 'user_info' %>
+
+<h4 class="user-show-title">フォロワー <%= @user.followers.count %> 人</h4>
+<ul class = "users user-show-users row" >
+  <%= render partial: 'users' %>
+</ul>
+<%= paginate @users %>
