--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(model: current_user, url: relationship_path(@user), method: :delete ) do |f|  %>
   <%= hidden_field_tag :following_id, @user.id %>
-  <%= f.submit "フォロー中", class: "btn btn-dark btn" %>
+  <%= f.submit "フォロー中", class: "btn btn-secondary" %>
 <% end %>
