--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,19 +3,6 @@
 <h1>ユーザ一覧</h1>
 
 <ul class = "users row" >
-<% @users.each do |user| %>
-  <li class="col-md-6 col-sm-12">
-    <div class="user-container">
-      <% if user.image.present? %>
-        <p class="img"><%= image_tag user.image_url(:thumb200) %></p>
-      <% else %>
-        <p class="img default-user-image"><%= image_tag 'default.png' %></p>
-      <% end %>
-      <p class="nickname"><%= user.nickname %></p>
-      <p><%= link_to user.nickname, user %></p>
-      <p class="follow">フォロー  人  フォロワー  人</p>
-    </div>
-  </li>
-<% end %>
+  <%= render partial: 'users' %>
 </ul>
 <%= paginate @users %>
