--- a/app/views/users/_user_tab.html.erb
+++ b/app/views/users/_user_tab.html.erb
@@ -1,4 +1,4 @@
-<ul class="row user-tab">
+<ul class="row tabs">
   <% if @current == 'top' %>
     <li><%= link_to "トップ", user_path(@user.id), class: "btn current" %></li>
   <% else %>
